# supermarket-waiting-queue-alarm

./: .gitignore  README.md  app.py  delete_all_migrations.py  docker-compose.yml  get_supermarket_by_plz.py  importcsv.py  install.sh  log.txt  manage.py  notebook.ps1  osm_extract_shops.R  osm_extract_shops.py  pyproject.toml  requirements.txt  sqlite_schema.dia  supermarket.code-workspace  supermarket_test.csv  supermarkets_part1.csv  todo.txt  ww-german-postal-codes-2-supermarkets.csv  ww-german-postal-codes-2.csv  ww-german-postal-codes-3.csv
.envs/.local/: .SUPERMARKET  .django  .postgres
apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
apps/supermarkets/: admin.py  apps.py  models.py  urls.py  views.py
apps/supermarkets/migrations/: 0001_initial.py
apps/users/: urls.py
apps/users/migrations/: 0001_initial.py
compose/local/django/: Dockerfile  entrypoint  jupyter_notebook_config.py  start  start_notebook.sh  start_regular
compose/local/postgres/: Dockerfile
concept/: sqlite_insert_supermarkets.py  sqlite_schema.dia
config/: celery.py  settings.py  test.py  urls.py  wsgi.py
csvs/: supermaerkte.csv  supermarket_part3.csv  supermarket_test.csv  supermarkets_ITA.csv  supermarkets_all.csv  supermarkets_part1.csv  ww-german-postal-codes-1-supermarkets.csv  ww-german-postal-codes-1.csv  ww-german-postal-codes-2-supermarkets.csv  ww-german-postal-codes.csv
old-flask-app/: app.py
osm/: osm_extract_shops.R  osm_extract_shops.py
static/css/: styles.css
templates/: base.html  pagination.html  search.html  search_form.html
(+3 files in other folders)
