[tool.poetry]
name = "corona-supermarket-queue"
version = "0.1.0"
description = "WirVSHAckathon 2020 - Covid-19 - handling supermarket queues"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
OSMPythonTools = "0.2.6"
Werkzeug = "0.15.5"
WTForms = "2.2.1"
pytest = "^5.4.1"
django-extensions = "^2.2.8"
psycopg2-binary = "^2.8.4"
celery = "^4.4.2"
redis = "^3.4.1"
flower = "^0.9.3"
django-celery-beat = "^2.0.0"
django-crispy-forms = "^1.9.0"
django-redis = "^4.11.0"
djangorestframework = "^3.11.0"
jupyter = "^1.0.0"
django-environ = "^0.4.5"
django-debug-toolbar = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
